fixing width and padding problem on mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -606,7 +606,7 @@
   .booking-form .container table th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 0.5rem;
+    padding: 1rem;
   }
 
   .booking-form .container table tr:nth-child(even) {
